--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "tauri-plugin-nosleep"
-version = "0.0.0"
-authors = [ "You" ]
-description = ""
+version = "0.1.0"
+authors = [ "Peter Evers <pevers90@gmail.com>" ]
+description = "Tauri plugin to prevent the power save functionality in the OS"
+keywords = ["tauri-plugin", "nosleep", "powersave", "caffeine"]
 edition = "2021"
 rust-version = "1.57"
 exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
@@ -11,4 +12,4 @@ exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
 tauri = { version = "1.0.0-rc.8" }
 serde = "1.0"
 thiserror = "1.0"
-nosleep = { version = "0.2.0-rc.2", features = ["serde"] }
+nosleep = { path = "../nosleep/nosleep", version = "0.2.0-rc.3", features = ["serde"] }
