--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "pretest": "yarn build"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "13.1.3",
-    "@rollup/plugin-typescript": "8.3.1",
-    "rollup": "2.70.1",
-    "rollup-plugin-terser": "7.0.2",
-    "typescript": "4.6.3"
+    "@rollup/plugin-node-resolve": "13.3.0",
+    "@rollup/plugin-typescript": "8.3.3",
+    "@rollup/plugin-terser": "0.4.4",
+    "rollup": "2.75.6",
+    "typescript": "4.7.3"
   },
   "dependencies": {
-    "@tauri-apps/api": "1.0.0-rc.4",
+    "@tauri-apps/api": "^2.0.0-alpha.11",
     "tslib": "^2.1.0"
   }
 }
