--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ links = "tauri-plugin-nosleep"
 tauri = { version = "2.0.0-beta.5" }
 serde = "1.0"
 thiserror = "1.0"
-nosleep = { version = "0.2.1", features = ["serde"] }
+nosleep = { path = "../nosleep/nosleep" }
 
 [build-dependencies]
-tauri-plugin = { version = "2.0.0-beta.3", features = ["build"] }
+tauri-plugin = { version = "2.0.0-beta.4", features = ["build"] }
