--- a/examples/tauri-app/src-tauri/Cargo.toml
+++ b/examples/tauri-app/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ tauri-build = { version = "2.0.0-beta.4", default-features = false , features = 
 [dependencies]
 tauri = { version = "2.0.0-beta.5", features = [] }
 tauri-plugin-nosleep = { path = "../../../" }
+objc = "0.2.7"
 
 [features]
 # this feature is used for production builds or when `devUrl` points to the filesystem
